-Algunos arreglos de clientes para aplicar Liskov -Ya se muestran correctamente las comandas -Falta el CRUD de comandas